--- a/home.html
+++ b/home.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-   <font color="red">This is some text!</font> 
-<h1>my name is SUSOVAN</h1>
+<font color="red">My name is susovan!</font> 
 <body>
 <html>
